<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.words.WordsFragment"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words_label"
        android:textAppearance="@style/label_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
    <View
        android:id="@+id/add_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabel"
        android:background="@drawable/plus_ic"/>
    <EditText
        android:id="@+id/editTextAdd"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@color/transparent"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/add_word"
        android:inputType="textPersonName"
        android:textColor="?colorPrimary"
        android:textColorHint="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_icon"
        app:layout_constraintTop_toTopOf="@+id/add_icon"
        tools:ignore="TextContrastCheck"
        android:maxLength="30"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdd" />

    <TextView
        android:id="@+id/textClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textAppearance="@style/text_numbers_edittext"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>