<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.numbers.NumbersFragment"
    android:background="@color/transparent">


    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbers_range"
        android:textAppearance="@style/label_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textStartRangeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        android:textAppearance="@style/text_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabel" />

    <EditText
        android:id="@+id/editTextStartRange"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:inputType="numberSigned"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/text_numbers_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStartRangeLabel"
        tools:ignore="SpeakableTextPresentCheck"
        android:maxLength="8"
        />

    <EditText
        android:id="@+id/editTextEndRange"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:inputType="numberSigned"
        android:textAppearance="@style/text_numbers_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndRangeLabel"
        tools:ignore="SpeakableTextPresentCheck"
        android:paddingHorizontal="16dp"
        android:maxLength="8"/>

    <TextView
        android:id="@+id/editTextEndRangeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/end"
        android:textAppearance="@style/text_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartRange" />
</androidx.constraintlayout.widget.ConstraintLayout>